# nesmancer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  linux.yaml  windows.yaml
src/: CMakeLists.txt  application.cpp  application.hpp  application_style.cpp  application_style.hpp  color_theme.cpp  color_theme.hpp  common.hpp  input_manager.cpp  input_manager.hpp  logger.hpp  main.cpp  nes_rom.cpp  nes_rom.hpp  sound_queue.cpp  utils.hpp  version.in
src/core/: apu.cpp  apu.hpp  cartridge.cpp  cartridge.hpp  controller.cpp  controller.hpp  cpu.cpp  cpu.hpp  device.cpp  device.hpp  emulator.cpp  emulator.hpp  global.hpp  logger.cpp  mapper.cpp  mapper.hpp  memory.cpp  memory.hpp  nes_file.cpp  nes_file.hpp  ppu.cpp  ppu.hpp  system_bus.cpp  system_bus.hpp  types.hpp
src/core/mappers/: axrom.cpp  axrom.hpp  cnrom.cpp  cnrom.hpp  mapper.cpp  mapper.hpp  mapper_cnrom.cpp  mapper_cnrom.hpp  mapper_mmc1.cpp  mapper_mmc1.hpp  mapper_mmc3.cpp  mapper_mmc3.hpp  mapper_nrom.cpp  mapper_nrom.hpp  mapper_uxrom.cpp  mapper_uxrom.hpp  mmc1.cpp  mmc1.hpp  mmc3.cpp  mmc3.hpp  nrom.cpp  nrom.hpp  uxrom.cpp  uxrom.hpp
src/platform/: platform.hpp
src/platform/windows/: nesmancer.rc  resources.rc
src/rom/: nes_file.hpp  nes_rom.cpp  nes_rom.hpp
src/sound/: SoundQueue.cpp  SoundQueue.hpp
src/widgets/: cpu_widget.cpp  cpu_widget.hpp  ppu_widget.cpp  ppu_widget.hpp  widget.hpp
tools/: cpu_opcodes.json  generate_opcode_table.py  update_ico_file.bat
